--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,32 @@
-*.class
+# maven ignore
+target/
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# eclipse ignore
+.settings/
+.project
+.classpath
 
-# Package Files #
+# idea ignore
+.idea/
+*.ipr
+*.iml
+*.iws
+
+# temp ignore
+*.log
+*.cache
+*.diff
+*.patch
+*.tmp
+*~
+
+# system ignore
+.DS_Store
+Thumbs.db
+
+# package ignore (optional)
 *.jar
 *.war
-*.ear
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+*.zip
+*.tar
+*.tar.gz
