--- a/pom.xml
+++ b/pom.xml
@@ -182,6 +182,12 @@
             <version>1.6.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.thoughtworks.xstream</groupId>
+            <artifactId>xstream</artifactId>
+            <version>1.4.9</version>
+        </dependency>
+
 
     </dependencies>
 
